--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 install:
     pip install --user -r requirements.txt
     pip install pipenv
+deploy:
+  provider: script
+  script: scripts/deploy.sh
+  on:
+    branch: master
