--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  -  pip install --user -r requirements.txt,
+  -  pip install -r requirements.txt
   -  pip install pipenv
 deploy:
   provider: script
