--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ python:
   - "2.7"
 # command to install dependencies
 install:
-  #-  pip install -r requirements.txt
-  #-  pip install pipenv
+  -  pip install -r requirements.txt
+  -  pip install pipenv
+script:
+  - echo "no tests"
 deploy:
   provider: script
   script: scripts/deploy.sh
