--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ deploy:
   provider: script
   script:
     - echo "yoyoyo $PWD"
-    - sh $TRAVIS_BUILD_DIR/scripts/deploy.sh
+    #- sh $TRAVIS_BUILD_DIR/scripts/deploy.sh
   on:
     branch: master
