--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 deploy:
   provider: script
   script:
-    - echo "yoyoyo $PWD"
-    #- sh $TRAVIS_BUILD_DIR/scripts/deploy.sh
+    #- echo "yoyoyo $PWD"
+    - sh $TRAVIS_BUILD_DIR/scripts/deploy.sh
   on:
     branch: master
