--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,9 @@
   "protocols": [
     {
       "name": "FlowCytometry",
-      "version": "1.0.1",
+      "version": "1.0.2",
       "categories": ["Protocols"],
+      "image_url": "https://travis-ci.org/bmiles/flowcytometry.svg?branch=master",
       "description": "Assess the fluorescent properties of a cell population using an Attune® NxT Acoustic Focusing Cytometer.",
       "command_string": "python flow_cytometry.py",
       "inputs": {
