--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-autoprotocol>=3.9.0,<4.0
+autoprotocol>=3.9.0
 autoprotocol_utilities>=2.1.7,<3.0
 --extra-index-url https://pypi.fury.io/cPM_X4Wx8sHcjpBnAxay/transcriptic/
 promodules>=2.5.1,<3.0
