--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "protocols": [
     {
       "name": "FlowCytometry",
-      "version": "1.0.2",
+      "version": "2.0.2",
       "categories": ["Protocols"],
       "image_url": "https://travis-ci.org/bmiles/flowcytometry.svg?branch=master",
       "description": "Assess the fluorescent properties of a cell population using an Attune® NxT Acoustic Focusing Cytometer.",
@@ -179,5 +179,5 @@
     }
   ],
   "license": "MIT",
-  "format": "python"
+  "format": "python3"
 }
