feat: added quick instructions category

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "protocols": [
     {
       "name": "FlowCytometry",
-      "version": "2.0.2",
-      "categories": ["Protocols"],
+      "version": "2.0.3",
+      "categories": ["Protocols", "Quick Instruction"],
       "image_url": "https://travis-ci.org/bmiles/flowcytometry.svg?branch=master",
       "description": "Assess the fluorescent properties of a cell population using an Attune® NxT Acoustic Focusing Cytometer.",
       "command_string": "python3 -m flow_cytometry",
